# physicsAgents

./: LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  settings.py
backend/src/physicsAgents/: settings.py
backend/src/physicsAgents/application/conversation/: get_response.py
backend/src/physicsAgents/application/conversation/workflow/: __init__.py  chains.py  edges.py  graph.py  nodes.py  state.py
backend/src/physicsAgents/domain/: physicist.py  physicist_factory.py  prompts.py
backend/src/physicsAgents/infrastructure/: api.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  config.ts  vite-env.d.ts
frontend/src/common/: types.ts
frontend/src/components/: ChatPage.tsx  ChatPageHeader.tsx  ChatPageInput.tsx  ChatPageMessages.tsx  ChatsList.tsx  Header.tsx
frontend/src/hooks/: useWebsocket.ts
frontend/src/services/: api.ts  chatService.ts
frontend/src/utility/: getUUID.ts
frontend1/: .eslintrc.cjs  package-lock.json  package.json
frontend1/src/components/: ChatsList.tsx
